--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0"
+        "laravel/framework": "6.18.2",
+        "laravel/tinker": "^1.0",
+        "spatie/laravel-permission": "^3.11"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
